--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -19,9 +19,10 @@ android:layout_height="match_parent">
         app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
         <ImageView
+            android:id="@+id/ivProductDetails"
+            android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@mipmap/background"
             android:transitionName="transitionImage"
             app:layout_collapseMode="parallax" />
 
