--- a/app/src/main/res/layout/horizontal_item.xml
+++ b/app/src/main/res/layout/horizontal_item.xml
@@ -12,10 +12,10 @@
         card_view:cardUseCompatPadding="true">
 
         <ImageView
-            android:id="@+id/imageItem"
+            android:id="@+id/ivHorizontalProduct"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@mipmap/background"
+            android:scaleType="centerCrop"
             android:contentDescription="@string/app_name" />
 
         <LinearLayout
