--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -2,36 +2,45 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="5dp"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="140dp"
+        card_view:cardUseCompatPadding="true"
+        card_view:cardElevation="2dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:padding="20dp"
-            android:orientation="horizontal">
+            android:layout_height="140dp"
+            android:padding="10dp"
+            android:orientation="horizontal"
+            android:weightSum="20">
 
             <ImageView
-                android:layout_width="110dp"
+                android:layout_width="match_parent"
                 android:layout_height="110dp"
-                android:background="@mipmap/background" />
+                android:background="@mipmap/background"
+                android:layout_weight="6"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center|left"
-                android:paddingLeft="30dp"
-                android:orientation="vertical">
+                android:paddingLeft="25dp"
+                android:orientation="vertical"
+                android:layout_weight="5">
 
                 <TextView
                     android:id="@+id/tvNameCart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:textSize="18dp"
+                    android:textSize="16dp"
                     android:text="Name" />
 
                 <TextView
@@ -41,9 +50,16 @@
                     android:layout_alignParentRight="true"
                     android:layout_below="@+id/tvNameCart"
                     android:paddingRight="11dp"
-                    android:textSize="18dp"
+                    android:textSize="16dp"
                     android:text="Price" />
             </LinearLayout>
+            <ImageView
+                android:id="@+id/ic_remove"
+                android:layout_width="match_parent"
+                android:layout_height="22dp"
+                android:layout_marginTop="45dp"
+                android:layout_weight="9"
+                android:src="@mipmap/ic_remove"/>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
