--- a/app/src/main/res/layout/horizontal_item.xml
+++ b/app/src/main/res/layout/horizontal_item.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
+            android:background="@color/pink_light2"
             android:contentDescription="@string/app_name" />
 
         <LinearLayout
