--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -24,7 +24,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
-                android:background="@mipmap/background"
+                android:background="@color/pink_light2"
                 android:layout_weight="6"/>
 
             <LinearLayout
