--- a/app/src/main/res/layout/item_cakes.xml
+++ b/app/src/main/res/layout/item_cakes.xml
@@ -6,8 +6,8 @@
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:layout_height="250dp"
+        android:layout_width="210dp"
+        android:layout_height="210dp"
         card_view:cardUseCompatPadding="true"
         card_view:cardElevation="4dp">
 
@@ -15,7 +15,8 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@mipmap/background"
+            android:background="@color/pink_light2"
+            android:scaleType="centerCrop"
             android:contentDescription="@string/app_name" />
 
         <LinearLayout
