--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -11,8 +11,7 @@
         android:layout_height="52dp"
         app:accentColor="@color/pink"
         app:primaryColor="@color/grey_light"
-        app:iconColor="@color/pink"
-        app:hasIcons="true"
+        app:textColor="@color/pink"
         />
 
     <android.support.v4.view.ViewPager
