--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -141,6 +141,7 @@
         android:paddingTop="15dp">
 
         <Button
+            android:id="@+id/btnOrder"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@color/pink"
