--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="pink">#F06292</color>
     <color name="pink_light">#f3dff7</color>
     <color name="pink_light2">#f5e7f8</color>
+    <color name="human">#fff5c0</color>
 </resources>
