--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolBar"
@@ -7,33 +6,22 @@
     android:layout_height="?attr/actionBarSize"
     android:background="@color/pink">
 
-    <ImageView
-        android:id="@+id/actionLeft"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:src="@mipmap/ic_menu" />
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/ivTitle"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:gravity="center_horizontal"
-            android:paddingLeft="10dp"
-            android:text="App Title"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:scaleType="centerInside"
+            android:background="@mipmap/title"/>
 
         <ImageView
             android:id="@+id/ivCart"
             android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="65dp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="16dp"
             android:src="@mipmap/ic_cart" />
