--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -3,11 +3,10 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f3dff7"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingTop="10dp"
-    android:background="#f3dff7"
-    >
+    android:paddingTop="10dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/layoutInfo"
@@ -140,6 +139,7 @@
         android:orientation="vertical"
         android:paddingTop="15dp">
 
+
         <Button
             android:id="@+id/btnOrder"
             android:layout_width="match_parent"
@@ -149,16 +149,23 @@
             android:textAllCaps="false"
             android:textColor="@color/white" />
 
-        <Button
+        <com.andexert.library.RippleView
+            android:id="@+id/rpCart"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/custom_border"
-            android:text="Add to Cart"
-            android:textAllCaps="false"
-            android:textColor="@color/gray" />
+            app:rv_color="@color/pink">
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
 
+                android:background="@color/white"
+                android:text="Add to Cart"
+                android:textAllCaps="false"
+                android:textColor="@color/gray" />
+
+        </com.andexert.library.RippleView>
     </LinearLayout>
 
 
