--- a/app/src/main/res/layout/item_cakes.xml
+++ b/app/src/main/res/layout/item_cakes.xml
@@ -12,7 +12,7 @@
         card_view:cardElevation="4dp">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/ivProductMore"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/pink_light2"
