--- a/app/src/main/res/layout/activity_cake_one.xml
+++ b/app/src/main/res/layout/activity_cake_one.xml
@@ -41,7 +41,7 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:fitsSystemWindows="true"
-                    android:scaleType="centerCrop"
+                    android:scaleType="centerInside"
                     android:src="@mipmap/ic_arrow_back" />
 
                 <TextView
