--- a/app/src/main/res/layout/cart_activity.xml
+++ b/app/src/main/res/layout/cart_activity.xml
@@ -15,20 +15,32 @@
             android:id="@+id/actionBack"
             android:layout_width="25dp"
             android:layout_height="25dp"
+            android:scaleType="centerInside"
             android:src="@mipmap/ic_arrow_back" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:paddingRight="16dp">
 
             <TextView
                 android:id="@+id/tvTitle"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:paddingLeft="-30dp"
+                android:layout_centerInParent="true"
                 android:text="Cart"
+                android:paddingRight="45dp"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tvOrder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_alignParentRight="true"
+                android:text="Order"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
@@ -71,7 +83,7 @@
             android:layout_weight="2"
             android:textSize="20dp"
             android:textColor="@color/pink"
-            android:text="$10.00"/>
+            android:text="10.00$"/>
     </LinearLayout>
 
 </RelativeLayout>
