--- a/app/src/main/res/layout/item_cakes.xml
+++ b/app/src/main/res/layout/item_cakes.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    card_view:cardElevation="2dp"
+    card_view:cardUseCompatPadding="true">
 
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="210dp"
         android:layout_height="210dp"
-        card_view:cardUseCompatPadding="true"
-        card_view:cardElevation="4dp">
+        android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/ivProductMore"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/pink_light2"
@@ -24,6 +24,7 @@
             android:layout_height="60dp"
             android:layout_gravity="bottom"
             android:background="@mipmap/bg_item_cake"
+            android:layout_alignParentBottom="true"
             android:orientation="vertical">
 
             <TextView
@@ -47,5 +48,5 @@
                 android:textColor="@color/white"
                 android:textSize="16dp" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
