--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -1,47 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:paddingTop="5dp"
-    android:orientation="vertical">
+    android:paddingTop="5dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="140dp"
-        card_view:cardUseCompatPadding="true"
-        card_view:cardElevation="2dp">
+        card_view:cardElevation="2dp"
+        card_view:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="140dp"
-            android:padding="10dp"
             android:orientation="horizontal"
+            android:padding="10dp"
             android:weightSum="20">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
-                android:background="@color/pink_light2"
-                android:layout_weight="6"/>
+                android:layout_weight="6"
+                android:background="@color/pink_light2" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="5"
                 android:gravity="center|left"
-                android:paddingLeft="25dp"
                 android:orientation="vertical"
-                android:layout_weight="5">
+                android:paddingLeft="25dp">
 
                 <TextView
                     android:id="@+id/tvNameCart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:textSize="16dp"
-                    android:text="Name" />
+                    android:text="Name"
+                    android:textSize="16dp" />
 
                 <TextView
                     android:id="@+id/tvPriceCart"
@@ -50,25 +50,38 @@
                     android:layout_alignParentRight="true"
                     android:layout_below="@+id/tvNameCart"
                     android:paddingRight="11dp"
-                    android:textSize="16dp"
-                    android:text="Price" />
+                    android:text="Price"
+                    android:layout_marginTop="5dp"
+                    android:textSize="16dp" />
+
                 <TextView
                     android:id="@+id/tvQuantity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_below="@+id/tvNameCart"
+                    android:layout_marginTop="5dp"
                     android:paddingRight="11dp"
-                    android:textSize="16dp"
-                    android:text="Quantity" />
+                    android:text="Quantity"
+                    android:textSize="16dp" />
+
+                <Spinner
+                    android:id="@+id/spinQuantityCart"
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@+id/tvNameCart"
+                    android:text="Quantity"
+                    android:textSize="16dp" />
             </LinearLayout>
+
             <ImageView
                 android:id="@+id/ic_remove"
                 android:layout_width="match_parent"
                 android:layout_height="22dp"
                 android:layout_marginTop="45dp"
                 android:layout_weight="9"
-                android:src="@mipmap/ic_remove"/>
+                android:src="@mipmap/ic_remove" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
