--- a/app/src/main/res/layout/cart_activity.xml
+++ b/app/src/main/res/layout/cart_activity.xml
@@ -78,12 +78,13 @@
             android:text="Total: "
             android:textSize="20dp"/>
         <TextView
+            android:id="@+id/cartTotal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:textSize="20dp"
             android:textColor="@color/pink"
-            android:text="10.00$"/>
+            android:text="0.00$"/>
     </LinearLayout>
 
 </RelativeLayout>
