--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -22,6 +22,7 @@
             android:weightSum="20">
 
             <ImageView
+                android:id="@+id/ivCartPicture"
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
                 android:layout_weight="6"
