--- a/app/src/main/res/layout/activity_cake_one.xml
+++ b/app/src/main/res/layout/activity_cake_one.xml
@@ -34,25 +34,63 @@
                 android:gravity="top"
                 android:minHeight="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
+                android:elevation="4dp"
                 app:titleMarginTop="13dp">
-
-                <ImageView
-                    android:id="@+id/actionLeft2"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:fitsSystemWindows="true"
-                    android:scaleType="centerInside"
-                    android:src="@mipmap/ic_arrow_back" />
-
-                <TextView
-                    android:id="@+id/tv_wedding_title"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:paddingLeft="-30dp"
-                    android:text="App Title"
-                    android:textColor="#fff"
-                    android:textSize="20sp" />
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/actionLeft2"
+                        android:layout_width="25dp"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerInside"
+                        android:src="@mipmap/ic_arrow_back" />
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="left|center"
+                        android:orientation="vertical"
+                        android:paddingLeft="45dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:text="T-Cake"
+                            android:layout_gravity="left"
+                            android:textColor="@color/white"
+                            android:textSize="22dp" />
+
+                        <TextView
+                            android:id="@+id/tv_wedding_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="left"
+                            android:text="App Title"
+                            android:textColor="#fff"
+                            android:textSize="15sp" />
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/ivCart"
+                        android:layout_width="22dp"
+                        android:layout_height="65dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="16dp"
+                        android:src="@mipmap/ic_cart" />
+
+                    <ImageView
+                        android:id="@+id/ivEvent"
+                        android:layout_width="22dp"
+                        android:layout_height="65dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="50dp"
+                        android:src="@mipmap/ic_event" />
+
+                </RelativeLayout>
 
             </android.support.v7.widget.Toolbar>
 
@@ -64,6 +102,8 @@
         android:id="@+id/flCakeWedding"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
