--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -12,29 +12,43 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="15dp">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/actionBackOrder"
                 android:layout_width="30dp"
-                android:layout_height="25dp"
+                android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
                 android:paddingRight="10dp"
                 android:scaleType="centerInside"
                 android:src="@mipmap/ic_arrow_back" />
 
-            <TextView
-                android:id="@+id/tvTitleOrder"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:scaleType="centerInside"
-                android:paddingRight="18dp"
-                android:text="Order"
-                android:textColor="@color/white"
-                android:textSize="20dp" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="left|center"
+                android:orientation="vertical"
+                android:paddingLeft="45dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_gravity="left"
+                    android:text="T-Cake"
+                    android:textColor="@color/white"
+                    android:textSize="22dp" />
+
+                <TextView
+                    android:id="@+id/tv_detail_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Order"
+                    android:layout_gravity="left|center"
+                    android:textColor="#fff"
+                    android:textSize="15dp" />
+            </LinearLayout>
 
         </RelativeLayout>
 
