--- a/app/src/main/res/layout/cart_activity.xml
+++ b/app/src/main/res/layout/cart_activity.xml
@@ -11,36 +11,51 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/pink">
 
-        <ImageView
-            android:id="@+id/actionBack"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:scaleType="centerInside"
-            android:src="@mipmap/ic_arrow_back" />
-
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingRight="16dp">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tvTitle"
+            <ImageView
+                android:id="@+id/actionBack"
+                android:layout_width="25dp"
+                android:layout_height="match_parent"
+                android:scaleType="centerInside"
+                android:src="@mipmap/ic_arrow_back" />
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:layout_centerInParent="true"
-                android:text="Cart"
-                android:paddingRight="45dp"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:layout_height="match_parent"
+                android:gravity="left|center"
+                android:orientation="vertical"
+                android:paddingLeft="45dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:text="T-Cake"
+                    android:layout_gravity="center"
+                    android:textColor="@color/white"
+                    android:textSize="22dp" />
+
+                <TextView
+                    android:id="@+id/tvTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Cart"
+                    android:layout_gravity="left|center"
+                    android:textColor="@color/white"
+                    android:textSize="15dp" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tvOrder"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
+                android:layout_height="match_parent"
+                android:gravity="center"
                 android:layout_alignParentRight="true"
                 android:text="Order"
+                android:paddingRight="16dp"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
