--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,22 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolBar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/pink">
+    android:background="@color/pink"
+    android:elevation="4dp"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/ivTitle"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:scaleType="centerInside"
-            android:background="@mipmap/title"/>
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/logo" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="left|center"
+            android:orientation="vertical"
+            android:paddingLeft="45dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:text="T-Cake"
+                android:layout_gravity="center"
+                android:textColor="@color/white"
+                android:textSize="22dp" />
+
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="App Title"
+                android:layout_gravity="left|center"
+                android:textColor="@color/white"
+                android:textSize="15dp" />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/ivCart"
@@ -25,6 +50,22 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="16dp"
             android:src="@mipmap/ic_cart" />
+
+        <ImageView
+            android:id="@+id/ivEvent"
+            android:layout_width="22dp"
+            android:layout_height="65dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="50dp"
+            android:src="@mipmap/ic_event" />
+
+        <ImageView
+            android:id="@+id/ivSearch"
+            android:layout_width="22dp"
+            android:layout_height="65dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="85dp"
+            android:src="@mipmap/ic_search" />
 
     </RelativeLayout>
 
