--- a/app/src/main/res/layout/activity_cake_one.xml
+++ b/app/src/main/res/layout/activity_cake_one.xml
@@ -9,6 +9,7 @@
         android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/pink_light"
         android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -82,22 +83,27 @@
                         android:layout_marginRight="16dp"
                         android:src="@mipmap/ic_cart" />
 
-                    <ImageView
-                        android:id="@+id/ivEvent"
-                        android:layout_width="22dp"
-                        android:layout_height="65dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="50dp"
-                        android:src="@mipmap/ic_event" />
 
                 </RelativeLayout>
 
             </android.support.v7.widget.Toolbar>
 
+
         </android.support.design.widget.CollapsingToolbarLayout>
+
 
     </android.support.design.widget.AppBarLayout>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabEvent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:src="@mipmap/ic_event"
+        android:clickable="true"
+        app:backgroundTint="@color/pink"
+        app:layout_anchor="@id/appBar"
+        app:layout_anchorGravity="bottom|right|end" />
     <FrameLayout
         android:id="@+id/flCakeWedding"
         android:layout_width="match_parent"
