--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
@@ -25,51 +23,21 @@
 
         </FrameLayout>
 
-        <com.github.clans.fab.FloatingActionMenu
-            android:id="@+id/menu"
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/left_drawer"
+        android:layout_width="80dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/black2">
+
+        <ListView
+            android:id="@+id/lsvMenu"
+            android:paddingTop="100dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/toolbar"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            app:fab_colorPressed="@color/pink_light"
-            fab:menu_backgroundColor="#ccffffff"
-            fab:menu_colorNormal="@color/pink"
-            fab:menu_labels_ellipsize="end"
-            fab:menu_labels_singleLine="true">
+            android:layout_height="match_parent"/>
 
-
-            <com.github.clans.fab.FloatingActionButton
-                android:id="@+id/fabHome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_home"
-                app:fab_colorNormal="@color/pink"
-                fab:fab_label="Home"
-                fab:fab_size="mini" />
-
-            <com.github.clans.fab.FloatingActionButton
-                android:id="@+id/fabContactUs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_contact_us_fab"
-                app:fab_colorNormal="@color/pink"
-                fab:fab_label="Contact Us"
-                fab:fab_size="mini" />
-
-            <com.github.clans.fab.FloatingActionButton
-                android:id="@+id/fabAboutUs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_about_us_fab"
-                app:fab_colorNormal="@color/pink"
-                fab:fab_label="About Us"
-                fab:fab_size="mini" />
-
-        </com.github.clans.fab.FloatingActionMenu>
     </RelativeLayout>
 
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
