--- a/app/src/main/res/layout/item_home_cakes.xml
+++ b/app/src/main/res/layout/item_home_cakes.xml
@@ -6,9 +6,10 @@
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        card_view:cardElevation="2dp"
+        android:layout_width="210dp"
+        android:layout_height="210dp"
+        card_view:cardElevation="4dp"
+        android:layout_centerInParent="true"
         card_view:cardUseCompatPadding="true">
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -25,7 +26,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="65dp"
+                android:layout_height="60dp"
                 android:layout_alignParentBottom="true"
                 android:layout_gravity="bottom"
                 android:background="@mipmap/bg_item_cake"
