--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -70,25 +70,30 @@
                             android:id="@+id/tv_detail_title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Detail"
                             android:layout_gravity="left|center"
+                            android:text="Detail"
                             android:textColor="#fff"
                             android:textSize="15dp" />
                     </LinearLayout>
 
-                    <ImageView
-                        android:id="@+id/ivCartDetail"
-                        android:layout_width="22dp"
-                        android:layout_height="match_parent"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="16dp"
-                        android:src="@mipmap/ic_cart" />
                 </RelativeLayout>
+
             </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabCart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:src="@mipmap/ic_cart"
+        app:backgroundTint="@color/pink"
+        app:layout_anchor="@id/appBar"
+        app:layout_anchorGravity="bottom|right|end" />
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/flDetail"
