--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -66,11 +66,11 @@
                 android:id="@+id/spinQuantity"
                 android:layout_width="50dp"
                 android:layout_height="30dp"
-                android:gravity="center"
                 android:layout_below="@+id/tvDetailPrice"
-                android:layout_marginTop="5dp"
-                android:text="Quantity: "
                 android:layout_marginLeft="120dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
+                android:text="Quantity: "
                 android:textColor="@color/black"
                 android:textSize="18dp" />
 
@@ -83,19 +83,6 @@
                 android:text="Egg less:"
                 android:textColor="@color/black"
                 android:textSize="18dp" />
-
-
-            <com.rey.material.widget.RadioButton
-                android:id="@+id/cbEggLess"
-                style="@style/Material.Drawable.RadioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/spinQuantity"
-                android:layout_marginLeft="115dp"
-                android:layout_marginTop="1dp"
-                android:button="@color/pink"
-                app:rbd_strokeColor="@color/pink" />
-
             <TextView
                 android:id="@+id/tvEggWith"
                 android:layout_width="wrap_content"
@@ -106,15 +93,33 @@
                 android:textColor="@color/black"
                 android:textSize="18dp" />
 
-            <com.rey.material.widget.RadioButton
-                android:id="@+id/cbEggWith"
-                style="@style/Material.Drawable.RadioButton"
+            <RadioGroup
+                android:layout_below="@+id/spinQuantity"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvEggLess"
-                android:layout_marginLeft="115dp"
-                android:layout_marginTop="1dp"
-                app:rbd_strokeColor="@color/pink" />
+                android:layout_height="wrap_content">
+
+                <com.rey.material.widget.RadioButton
+                    android:id="@+id/rbEggLess"
+                    style="@style/Material.Drawable.RadioButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/spinQuantity"
+                    android:layout_marginLeft="115dp"
+                    android:layout_marginTop="1dp"
+                    android:button="@color/pink"
+                    app:rbd_strokeColor="@color/pink" />
+
+
+                <com.rey.material.widget.RadioButton
+                    android:id="@+id/rbEggWith"
+                    style="@style/Material.Drawable.RadioButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvEggLess"
+                    android:layout_marginLeft="115dp"
+                    android:layout_marginTop="1dp"
+                    app:rbd_strokeColor="@color/pink" />
+            </RadioGroup>
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
