--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -5,8 +5,33 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="10dp"
+    android:padding="16dp"
     tools:context="com.example.hoanghiep.projectcakemaker.fragment.OrderFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingBottom="5dp"
+        android:weightSum="10">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_weight="8"
+            android:paddingLeft="-25dp"
+            android:scaleType="centerInside"
+            android:src="@mipmap/ic_customer" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/customerInfo"
+            android:textColor="@color/black"
+            android:textSize="25dp" />
+    </LinearLayout>
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -22,29 +47,6 @@
             android:orientation="vertical"
             android:padding="14dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:weightSum="10">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_weight="8"
-                    android:paddingLeft="-25dp"
-                    android:scaleType="centerInside"
-                    android:src="@mipmap/ic_customer" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:text="@string/customerInfo"
-                    android:textColor="@color/black"
-                    android:textSize="22dp" />
-            </LinearLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textCustomName"
