--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -161,7 +161,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:background="@color/pink"
-                android:text="Send"
+                android:text="Send Feedback"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
 
