Show cart quantity ver 2

--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -90,6 +90,7 @@
                         <TextView
                             android:id="@+id/tvItemCart"
                             android:layout_width="14dp"
+                            android:visibility="invisible"
                             android:layout_height="12dp"
                             android:background="@drawable/item_cart"
                             android:gravity="center"
